--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -19,6 +19,15 @@
 <body>
     <div class="globalWrapper">
 
+        <div class="container">
+            <header class="mainHeader">
+                <h1><a href="#">Shaker Hamdi</a></h1>
+            </header>
+            <!-- logo -->
+
+        </div>
+        <!-- container -->
+
     </div>
     <!-- globalWrapper -->
     <!-- For Live Reload to work -->
