Finished the nav

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -25,6 +25,23 @@
             </header>
             <!-- logo -->
 
+            <nav class="mainNav">
+                <ul>
+                    <li><a href="#" class="active">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <!-- mainNav -->
+
+            <section class="about">
+                <header class="sectionHeader">
+                    <h3>About Me</h3>
+                    <hr>
+                </header>
+            </section>
+            <!-- about -->
+
         </div>
         <!-- container -->
 
