Added onePage nav plugin to the page

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -27,14 +27,14 @@
 
             <nav class="mainNav">
                 <ul>
-                    <li><a href="#" class="active">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contactMe">Contact</a></li>
                 </ul>
             </nav>
             <!-- mainNav -->
 
-            <section class="about">
+            <section class="about" id="about">
                 <header class="sectionHeader">
                     <h3>About Me</h3>
                     <hr>
@@ -54,7 +54,7 @@
             </section>
             <!-- about -->
 
-            <section class="portfolio">
+            <section class="portfolio" id="portfolio">
                 <header class="sectionHeader">
                     <h3>My Portfolio</h3>
                     <hr>
@@ -104,7 +104,7 @@
             </section>
             <!-- portfolio -->
 
-            <section class="contactMe">
+            <section class="contactMe" id="contactMe">
                 <header class="sectionHeader">
                     <h3>Contact Me</h3>
                     <hr>
