Added magnific popup and HEPCA projct

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -63,39 +63,17 @@
                 <article class="content">
                     <div class="project">
                         <div class="projectThumb">
-                            <img src="images/projectThumb.jpg" alt="project Thumb">
+                            <img src="images/hepca/projectThumb.jpg" alt="project Thumb">
                         </div>
 
                         <div class="projectDesc">
-                            <h2>Project title goes here.</h2>
-                            <p>Lorem ipsum dolor sit amet, ei partem adipisci nec, ex sed wisi dolorum delicata, ea has oporteat tincidunt. At volumus aliquando eos. Mei dicunt gloriatur honestatis an. Ei everti discere scripserit pro. An lobortis argumentum eam, et dicam ponderum appellantur nam.</p>
-                            <a href="#" class="more"><span class="text">Details</span><span class="bg"></span></a>
-                        </div>
-                    </div>
-                    <!-- project -->
-
-                    <div class="project">
-                        <div class="projectThumb">
-                            <img src="images/projectThumb.jpg" alt="project Thumb">
+                            <h2>HEPCA</h2>
+                            <p>HEPCA (Hurghada Environmental Protection and Conservation Association) is an ongoing project I'm working on right now for my current company MMD (<a href="http://moselaymd.com/" target="_blank">Moselay Media Development</a>). I'm responsible for the UI Design and UI Development of the project, and the project is currently a work on progress ...</p>
+                            <a href="#projectDetails1" class="more" data-effect="mfp-3d-unfold"><span class="text">Details</span><span class="bg"></span></a>
                         </div>
 
-                        <div class="projectDesc">
-                            <h2>Project title goes here.</h2>
-                            <p>Lorem ipsum dolor sit amet, ei partem adipisci nec, ex sed wisi dolorum delicata, ea has oporteat tincidunt. At volumus aliquando eos. Mei dicunt gloriatur honestatis an. Ei everti discere scripserit pro. An lobortis argumentum eam, et dicam ponderum appellantur nam.</p>
-                            <a href="#" class="more"><span class="text">Details</span><span class="bg"></span></a>
-                        </div>
-                    </div>
-                    <!-- project -->
-
-                    <div class="project">
-                        <div class="projectThumb">
-                            <img src="images/projectThumb.jpg" alt="project Thumb">
-                        </div>
-
-                        <div class="projectDesc">
-                            <h2>Project title goes here.</h2>
-                            <p>Lorem ipsum dolor sit amet, ei partem adipisci nec, ex sed wisi dolorum delicata, ea has oporteat tincidunt. At volumus aliquando eos. Mei dicunt gloriatur honestatis an. Ei everti discere scripserit pro. An lobortis argumentum eam, et dicam ponderum appellantur nam.</p>
-                            <a href="#" class="more"><span class="text">Details</span><span class="bg"></span></a>
+                        <div id="projectDetails1" class="projectDetails mfp-with-anim mfp-hide">
+                            hello
                         </div>
                     </div>
                     <!-- project -->
