Added projects to portfolio

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Shaker Hamdi">
     <title>Shaker Hamdi</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="images/faveicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="images/shakerfav.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="globalWrapper">
             <header class="mainHeader">
-                <h1><a href="#">Shaker Hamdi</a></h1>
+                <h1><a href="index.html">Shaker Hamdi</a></h1>
             </header>
             <!-- logo -->
 
@@ -69,14 +69,97 @@
                         <div class="projectDesc">
                             <h2>HEPCA</h2>
                             <p>HEPCA (Hurghada Environmental Protection and Conservation Association) is an ongoing project I'm working on right now for my current company MMD (<a href="http://moselaymd.com/" target="_blank">Moselay Media Development</a>). I'm responsible for the UI Design and UI Development of the project, and the project is currently a work on progress ...</p>
-                            <a href="#projectDetails1" class="more" data-effect="mfp-3d-unfold"><span class="text">Details</span><span class="bg"></span></a>
+                            <a href="hepca.html" class="more"><span class="text">Details</span><span class="bg"></span></a>
+                            <!-- <a href="#projectDetails1" class="more" data-effect="mfp-3d-unfold"><span class="text">Details</span><span class="bg"></span></a> -->
                         </div>
 
-                        <div id="projectDetails1" class="projectDetails mfp-with-anim mfp-hide">
-                            hello
+                        <!-- <div id="projectDetails1" class="projectDetails mfp-with-anim mfp-hide">
+                            <div class="imageSlider">
+                                <ul class="owlCarousel">
+                                    <li><img src="images/hepca/01.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/02.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/03.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/04.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/05.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/06.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/07.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/08.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/09.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/10.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/11.jpg" alt="Screenshot"></li>
+                                    <li><img src="images/hepca/12.jpg" alt="Screenshot"></li>
+                                </ul>
+                            </div>
+                        </div> -->
+                    </div>
+                    <!-- project -->
+
+                    <div class="project">
+                        <div class="projectThumb">
+                            <img src="images/akhbar/projectThumb.jpg" alt="project Thumb">
+                        </div>
+
+                        <div class="projectDesc">
+                            <h2>Akhbar El Youm</h2>
+                            <p>Akhbar El Youm is a major project I did for my current company MMD (<a href="http://moselaymd.com/" target="_blank">Moselay Media Development</a>). I was responsible for the UI Development for both the desktop and the mobile version of the website. The project is alwyas updating, so you might see some changes in the future or perhaps a complete re-design.</p>
+                            <a href="http://akhbarelyom.com/" class="more" target="_blank"><span class="text">Details</span><span class="bg"></span></a>
                         </div>
                     </div>
                     <!-- project -->
+
+                    <div class="project">
+                        <div class="projectThumb">
+                            <img src="images/mmd_logo/projectThumb.jpg" alt="project Thumb">
+                        </div>
+
+                        <div class="projectDesc">
+                            <h2>MMD Logo</h2>
+                            <p>This the my current company's logo, MMD (<a href="http://moselaymd.com/" target="_blank">Moselay Media Development</a>). I was in charge of creating a new logo for the company, and here it is. It's currently in use in every digital or print material the company produce.</p>
+                            <a href="http://moselaymd.com/" class="more" target="_blank"><span class="text">Details</span><span class="bg"></span></a>
+                        </div>
+                    </div>
+                    <!-- project -->
+
+                    <div class="project">
+                        <div class="projectThumb">
+                            <img src="images/aqarmap/projectThumb.jpg" alt="project Thumb">
+                        </div>
+
+                        <div class="projectDesc">
+                            <h2>Aqarmap</h2>
+                            <p>The famous <a href="https://aqarmap.com/" target="_blank">Aqarmap.com</a>. I worked for Aqarmap for quite sometime, and during this period I was in charge of the re-design and front-end developing of their website (among other things). It was one of the best projects I've worked on in my career :)</p>
+                            <a href="https://aqarmap.com/" class="more" target="_blank"><span class="text">Details</span><span class="bg"></span></a>
+                        </div>
+                    </div>
+                    <!-- project -->
+
+                    <div class="project">
+                        <div class="projectThumb">
+                            <img src="images/barsoom/projectThumb.jpg" alt="project Thumb">
+                        </div>
+
+                        <div class="projectDesc">
+                            <h2>Barsoom</h2>
+                            <p>Barsoom is a PSD template I did a while back for <a href="http://themeforest.net/" target="_blank">themeforest.net</a> as a news / magazine template. I'm proud of how this design came out. But due to lack of time back then I sold the UI Development rights to another themeforest.net author.</p>
+                            <a href="http://themeforest.net/item/barsoom-12-psd-magazine-news-and-blog-template/3324512" class="more" target="_blank"><span class="text">Details</span><span class="bg"></span></a>
+                        </div>
+                    </div>
+                    <!-- project -->
+
+                    <div class="project">
+                        <div class="projectThumb">
+                            <img src="images/kora_score/projectThumb.jpg" alt="project Thumb">
+                        </div>
+
+                        <div class="projectDesc">
+                            <h2>Kora Live Score</h2>
+                            <p>Kora Live Score is a mobile app design I did for a jordanian company called "knockbook".</p>
+                            <a href="kora_score.html" class="more"><span class="text">Details</span><span class="bg"></span></a>
+                        </div>
+                    </div>
+                    <!-- project -->
+
+                    
                 </article>
                 <!-- content -->
             </section>
@@ -112,6 +195,13 @@
             <!-- contactMe -->
 
             <footer>
+                <div class="socialLinks">
+                    <ul>
+                        <li><a href="https://www.facebook.com/Shaker.Hamdi" class="facebook" target="_blank"><i class="icon">&#xf09a;</i></a></li>
+                        <li><a href="https://plus.google.com/u/0/102143771762786053235/posts" class="google" target="_blank"><i class="icon">&#xf0d5;</i></a></li>
+                        <li><a href="https://www.linkedin.com/profile/view?id=AAIAAATMQbcBQl3QIlplY5x58giKH8abEFLCi_o&trk=nav_responsive_tab_profile_pic" class="linkedIn" target="_blank"><i class="icon">&#xf0e1;</i></a></li>
+                    </ul>
+                </div>
                 <p>&copy; 2015. All rights reserved, shakerhamdi.net</p>
             </footer>
             <!-- footer -->
