Added contact.php to the project

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -48,6 +48,15 @@
 
                     <div class="text">
                         <p>Salam all.<br>My  name is Shaker Hamdi Ahmed. I’m a UI Designer / Developer living in Cairo, Egypt. I have 5 years of experience in UI design and Front-End devleloping. I worked on a variety of projects (Web and Mobile), and for a number of companies both big and small.</p>
+
+                        <div class="socialLinks">
+                            <ul>
+                                <li><a href="https://www.facebook.com/Shaker.Hamdi" class="facebook" target="_blank"><i class="icon">&#xf09a;</i></a></li>
+                                <li><a href="https://plus.google.com/u/0/102143771762786053235/posts" class="google" target="_blank"><i class="icon">&#xf0d5;</i></a></li>
+                                <li><a href="https://www.linkedin.com/profile/view?id=AAIAAATMQbcBQl3QIlplY5x58giKH8abEFLCi_o&trk=nav_responsive_tab_profile_pic" class="linkedIn" target="_blank"><i class="icon">&#xf0e1;</i></a></li>
+                            </ul>
+                        </div>
+                        <!-- socialLinks -->
                     </div>
                 </article>
                 <!-- content -->
@@ -174,15 +183,15 @@
                 <article class="content">
                     <form action="#">
                         <label class="name">
-                            <input type="text" placeholder="Your Name ...">
+                            <input type="text" name="name" placeholder="Your Name ...">
                         </label>
 
                         <label class="mail">
-                            <input type="text" placeholder="Your E-mail ...">
+                            <input type="text" name="email" placeholder="Your E-mail ...">
                         </label>
                         
                         <label class="message">
-                            <textarea placeholder="Your Message ..."></textarea>
+                            <textarea name="message" placeholder="Your Message ..."></textarea>
                         </label>
                         
                         <div class="submit">
