--- a/builds/development/thanks.html
+++ b/builds/development/thanks.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="Shaker Hamdi">
     <title>Shaker Hamdi</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/app.css">
     <link href="images/shakerfav.ico" rel="shortcut icon" type="image/x-icon">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!--[if lt IE 9]>
