Update my email

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 
                 <article class="content">
                     <!--<a href="mailto:someone@example.com?Subject=From%20My%20Website">Send me an E-mail</a>-->
-                    <a href="mailto:someone@example.com?Subject=From%20My%20Website"><span class="text">Send me an E-mail</span><span class="bg"></span></a>
+                    <a href="mailto:shaker.hamdi.ahmed@gmail.com?Subject=From%20My%20Website"><span class="text">Send me an E-mail</span><span class="bg"></span></a>
                 </article>
                 <!-- content -->
             </section>
